sanitize inputs, add quit and help commands

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 # Makefile
 
-CC=gcc #-fsanitize=address
+CC=gcc -fsanitize=address
 CPPFLAGS= -MMD -D_XOPEN_SOURCE=500
 CFLAGS= -Wall -Wextra -std=c99 -O0 -g
 LDFLAGS=
