--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@
 CC=gcc #-fsanitize=address
 CPPFLAGS= -MMD -D_XOPEN_SOURCE=500 `pkg-config --cflags sdl`
 CFLAGS= -Wall -Wextra -std=c99 -O0 -g
-LDFLAGS=-lSDL -lSDL_mixer -lSDL_image#Linker
+LDFLAGS=-lSDL -lSDL_image#Linker
 LDLIBS=`pkg-config --libs sdl SDL_image`
 
 SRC= board.c piece.c main.c list.c find_move.c #interface.c
